@@ -54,8 +54,8 @@ dname2			DNAME	dname2-target
 foo.dname2-target	TXT	"testing dname"
 
 ; A secure subdomain
-secure			NS	ns.secure
-ns.secure		A	10.53.0.3
+secure			NS	ns3.secure
+ns3.secure		A	10.53.0.3
 
 ; An insecure subdomain
 insecure		NS	ns.insecure
