@@ -13,8 +13,6 @@
 ; OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 ; PERFORMANCE OF THIS SOFTWARE.
 
-; $Id: secure.example.db.in,v 1.16 2010/07/15 01:17:45 jinmei Exp $
-
 $TTL 300	; 5 minutes
 @			IN SOA	mname1. . (
 				2000042407 ; serial
@@ -23,8 +21,8 @@ $TTL 300	; 5 minutes
 				1814400    ; expire (3 weeks)
 				3600       ; minimum (1 hour)
 				)
-			NS	ns
-ns			A	10.53.0.3
+			NS	ns3
+ns3			A	10.53.0.3
 
 a			A	10.0.0.1
 b			A	10.0.0.2
@@ -36,8 +34,8 @@ x			CNAME	a
 private			NS	ns.private
 ns.private		A	10.53.0.2
 
-insecure		NS	ns.insecure
-ns.insecure		A	10.53.0.2
+insecure		NS	ns2.insecure
+ns2.insecure		A	10.53.0.2
 
 nosoa 			NS	ns.nosoa
 ns.nosoa		A	10.53.0.7
